@@ -46,6 +46,8 @@ Post-v2.17.0
      * 'dpif-netdev/subtable-lookup-prio-get' appctl command renamed to
        'dpif-netdev/subtable-lookup-info-get' to better reflect its purpose.
        The old variant is kept for backward compatibility.
+   - Linux datapath:
+     * Add offloading meter tc police.
 
 
 v2.17.0 - 17 Feb 2022
